--- a/test/templates/Vagrantfile.smartos.erb
+++ b/test/templates/Vagrantfile.smartos.erb
@@ -5,14 +5,17 @@ Vagrant.configure("2") do |c|
   c.vm.box = "<%= config[:box] %>"
   c.vm.box_url = "<%= config[:box_url] %>"
 
+  c.ssh.insert_key = false
+
+  <% if config[:zone] %>
   c.vm.communicator = 'smartos'
   c.global_zone.platform_image = 'latest'
-  c.zone.name = 'base64'
-  c.zone.brand = 'joyent'
-  c.zone.image = 'd34c301e-10c3-11e4-9b79-5f67ca448df0'
+  c.zone.name = '<%= config[:zone][:name] %>'
+  c.zone.brand = '<%= config[:zone][:brand] || 'joyent' %>'
+  c.zone.image = '<%= config[:zone][:image] %>'
   c.zone.memory = 1536
   c.zone.disk_size = 5
-
+  <% end %>
   <% if config[:vm_hostname] %>
     c.vm.hostname = "<%= config[:vm_hostname] %>"
   <% end %>
@@ -28,22 +31,19 @@ Vagrant.configure("2") do |c|
   <% if config[:ssh_key] %>
     c.ssh.private_key_path = "<%= config[:ssh_key] %>"
   <% end %>
-
   <% Array(config[:network]).each do |opts| %>
     c.vm.network(:<%= opts[0] %>, <%= opts[1..-1].join(", ") %>)
   <% end %>
-
   c.vm.synced_folder ".", "/vagrant", disabled: true
   <% config[:synced_folders].each do |source, destination, options| %>
     c.vm.synced_folder "<%= source %>", "<%= destination %>", <%= options %>
   <% end %>
-
   c.vm.provider :<%= config[:provider] %> do |p|
   <% config[:customize].each do |key, value| %>
     <% case config[:provider]
-       when "virtualbox" %>
-      p.customize ["modifyvm", :id, "--<%= key %>", "<%= value %>"]
-    <% when "rackspace", "softlayer" %>
+    when 'virtualbox' %>
+  p.customize ["modifyvm", :id, "--<%= key %>", "<%= value %>"]
+    <% when 'rackspace', 'softlayer' %>
       p.<%= key %> = "<%= value%>"
     <% when /^vmware_/ %>
       <% if key == :memory %>
